# pairx

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: demo.py  miewid_demo.py
src/pairx/: __init__.py  core.py  dataset.py
src/pairx/canonizers/: resnet_timm.py
src/pairx/xai_canonizers/: __init__.py
