[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pairx"
version = "0.1.0"
description = " Pairwise mAtching of Intermediate Representations for eXplainability (PAIR-X)."
readme = "README.md"
license = { text = "MIT" }
keywords = ["explainable-ai", "computer-vision", "deep-learning", ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
    "zennit>=0.5.1",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.0",
]

[project.urls]
Repository = "https://github.com/WildMeOrg/pairx"
Issues = "https://github.com/WildMeOrg/pairx/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pairx*"]

[tool.setuptools_scm]
write_to = "src/pairx/_version.py"


